<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login"
    android:orientation="vertical"
    android:background="@drawable/background6">

    <TextView
        android:id="@+id/textview_Log_in"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_normal"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/vie_bg"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txt_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/inter_normal"
            app:startIconDrawable="@drawable/person"
            app:endIconMode="none"
            android:hint="Username"
            app:helperText=""
            app:helperTextTextColor="@color/red"
            android:selectAllOnFocus="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/inter_normal"
            android:hint="Password"
            android:selectAllOnFocus="true"
            app:endIconMode="password_toggle"
            app:helperText=""
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:background="?selectableItemBackgroundBorderless"
        android:fontFamily="@font/inter_normal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/forgot_password"
        android:textColor="@color/violet"
        android:textSize="12dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_normal"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/Orwith"
        android:textColor="@color/light_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />


    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/signin_with_gg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/google_sign_up"
        android:clickable="false"
        app:isDarkTheme="true" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/dont_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:fontFamily="@font/inter_normal"
            android:gravity="right|center_vertical"
            android:text="@string/dont_have_an_acc_yet"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/inter_normal"
            android:gravity="left|center_vertical"
            android:text="@string/btn_signup"
            android:textColor="@color/violet" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>