<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.fragment_setting"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"
        android:background="@color/violet">

        <ImageButton
            android:id="@+id/btn_back_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_west_24"
            app:tint ="@color/white"/>

        <TextView
            android:id="@+id/title_setting"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:text="@string/title_setting"
            android:fontFamily="@font/inter_normal"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/language_setting"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_normal"
                android:text="@string/language_setting"
                android:textColor="@color/dark_25"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spLanguage"
                android:layout_width="120dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_marginLeft="118dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/spinner_style" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_notification_setting"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_setting"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_normal"
                android:text="@string/notification_setting"
                android:textColor="@color/dark_25"
                android:textSize="18dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="224dp"
                android:layout_marginTop="21dp"
                android:background="@color/white"
                android:src="@drawable/arrowright" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about_setting"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_normal"
                android:text="@string/about_setting"
                android:textColor="@color/dark_25"
                android:textSize="18dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="203dp"
                android:layout_marginTop="21dp"
                android:background="@color/white"
                android:src="@drawable/arrowright" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_help_setting"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/help_setting"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_normal"
                android:text="@string/help_setting"
                android:textColor="@color/dark_25"
                android:textSize="18dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="222dp"
                android:layout_marginTop="21dp"
                android:background="@color/white"
                android:src="@drawable/arrowright" />

        </LinearLayout>
    </LinearLayout>
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/polar_bear" />
</LinearLayout>